k8s/apps/tools/ytptube/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ytptube
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ytptube
  namespace: ytptube
  labels:
    app.kubernetes.io/name: ytptube
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ytptube
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ytptube
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: ytptube
          image: ghcr.io/arabcoders/ytptube:v2.1.2@sha256:393d83f21618f5416e04b7900869de16e57e4c72a34692c1ed92147ea2d0b793
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "768Mi"
              cpu: "1000m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ytptube-config
        - name: downloads
          persistentVolumeClaim:
            claimName: ytptube-downloads
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: ytptube
  namespace: ytptube
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: ytptube
  ports:
    - port: 80
      targetPort: 8081
      name: http
